...
              ),
            ),
          ),
        ],
      ),
      floatingActionButton: FloatingActionButton(
        key: const Key('addExpenseButton'),
        onPressed: isActionDisabled
            ? null
            : () async {
                await showDialog(
                  context: context,
                  builder: (context) {
...
